...
        <scene sceneID="8Up-lb-m1R">
            <objects>
                <viewController storyboardIdentifier="FindPeople" title="Find Mentor - People" useStoryboardIdentifierAsRestorationIdentifier="YES" id="z7N-nK-aF0" customClass="FindPeopleViewController" customModule="Trajectory" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="wj6-hv-rjC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            </imageView>
                            <searchBar contentMode="redraw" barStyle="blackTranslucent" searchBarStyle="minimal" placeholder="Search for available mentors" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q43-hf-nq4">
                                <rect key="frame" x="0.0" y="20" width="372" height="56"/>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profileImg" translatesAutoresizingMaskIntoConstraints="NO" id="4Am-cK-CyS">
                                                    <rect key="frame" x="6" y="0.0" width="130" height="130"/>
                                                    <constraints>
...
                                </connections>
                            </collectionView>
                            <searchBar contentMode="redraw" barStyle="blackTranslucent" searchBarStyle="minimal" text="" placeholder="Search within your organizations" translatesAutoresizingMaskIntoConstraints="NO" id="t35-Na-Lb9">
                                <rect key="frame" x="0.0" y="20" width="375" height="56"/>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                    <constraint firstAttribute="width" constant="180" id="toJ-jG-xxf"/>
                                </constraints>
                                <state key="normal" title="Request Mentorship">
                                    <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Ou8-Cl-C2A" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Find" image="Find-48" selectedImage="Find-48" id="c6V-pK-Stf"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" translucent="NO" id="jtj-7E-QeU">
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="edP-lt-TC9">
                                <rect key="frame" x="203.5" y="605" width="155.5" height="30"/>
                                <state key="normal" title="Cancel"/>
                                <connections>
                                    <action selector="cancelUpdate:" destination="jxe-1C-Vc2" eventType="touchUpInside" id="BIv-oy-43d"/>
...
